@@ -9,9 +9,9 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import pl.vabanq.erp.api.request.FastenersAccessoryRequest;
-import pl.vabanq.erp.api.request.FilamentAccessoryRequest;
-import pl.vabanq.erp.api.request.PackagingAccessoryRequest;
+import pl.vabanq.erp.api.request.accessory.FastenersAccessoryRequest;
+import pl.vabanq.erp.api.request.accessory.FilamentAccessoryRequest;
+import pl.vabanq.erp.api.request.accessory.PackagingAccessoryRequest;
 import pl.vabanq.erp.domain.products.accessory.AccessoryService;
 import pl.vabanq.erp.infrastructure.database.accessory.AccessoryRepositoryJPA;
 
@@ -71,7 +71,7 @@ public class AccessoryControllerIntegrationTest {
         accessoryService.saveFilament(
                 "PLA 1kg", "XYZ", "PLA", "200.0", "60.0", "19.99", "#FFFFFF", "High-quality filament", "100.0"
         );
-        String filamentId = accessoryService.getAllFilaments().get(0).id(); // Pobieramy ID zapisanego filamentu
+        String filamentId = accessoryService.getAllFilaments().getFirst().id(); // Pobieramy ID zapisanego filamentu
 
         // Przygotowujemy żądanie aktualizacji
         FilamentAccessoryRequest request = new FilamentAccessoryRequest(
@@ -93,13 +93,12 @@ public class AccessoryControllerIntegrationTest {
                 .andExpect(jsonPath("$.description").value("Updated description"))
                 .andExpect(jsonPath("$.quantity").value(150.0));
     }
-
     @Test
     @DisplayName("Save Packaging Accessory - Success")
     void shouldSavePackagingAccessory() throws Exception {
         // Arrange
         PackagingAccessoryRequest request = new PackagingAccessoryRequest(
-                "Box A", "S", "10x20x30", "5.50", "100.0"
+                "Box A", "S", "10x20x30", "5.50", "100.0", "Small packaging box"  // Added description
         );
 
         // Act & Assert
@@ -111,7 +110,8 @@ public class AccessoryControllerIntegrationTest {
                 .andExpect(jsonPath("$.packagingSize").value("S"))
                 .andExpect(jsonPath("$.dimensions").value("10x20x30"))
                 .andExpect(jsonPath("$.netPricePerQuantity").value(5.50))
-                .andExpect(jsonPath("$.quantity").value(100.0));
+                .andExpect(jsonPath("$.quantity").value(100.0))
+                .andExpect(jsonPath("$.description").value("Small packaging box"));  // Check description
     }
 
     @Test
@@ -120,13 +120,13 @@ public class AccessoryControllerIntegrationTest {
         // Arrange
         // Najpierw zapisujemy opakowanie
         accessoryService.savePackagingAccessory(
-                "Box A", "S", "10x20x30", "5.50", "100.0"
+                "Box A", "S", "10x20x30", "5.50", "100.0", "Small packaging box"
         );
-        String packagingId = accessoryService.getAllPackagingAccessories().get(0).id(); // Pobieramy ID zapisanego opakowania
+        String packagingId = accessoryService.getAllPackagingAccessories().getFirst().id(); // Pobieramy ID zapisanego opakowania
 
         // Przygotowujemy żądanie aktualizacji
         PackagingAccessoryRequest request = new PackagingAccessoryRequest(
-                "Updated Box", "M", "20x30x40", "7.75", "200.0"
+                "Updated Box", "M", "20x30x40", "7.75", "200.0", "Updated packaging box" // Added description
         );
 
         // Act & Assert
@@ -138,7 +138,8 @@ public class AccessoryControllerIntegrationTest {
                 .andExpect(jsonPath("$.packagingSize").value("M"))
                 .andExpect(jsonPath("$.dimensions").value("20x30x40"))
                 .andExpect(jsonPath("$.netPricePerQuantity").value(7.75))
-                .andExpect(jsonPath("$.quantity").value(200.0));
+                .andExpect(jsonPath("$.quantity").value(200.0))
+                .andExpect(jsonPath("$.description").value("Updated packaging box"));  // Check updated description
     }
 
     @Test
@@ -146,7 +147,7 @@ public class AccessoryControllerIntegrationTest {
     void shouldSaveFastenersAccessory() throws Exception {
         // Arrange
         FastenersAccessoryRequest request = new FastenersAccessoryRequest(
-                "Screw Set", "15.99", "500.0"
+                "Screw Set", "15.99", "500.0", "Set of screws" // Added description
         );
 
         // Act & Assert
@@ -156,7 +157,8 @@ public class AccessoryControllerIntegrationTest {
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.name").value("Screw Set"))
                 .andExpect(jsonPath("$.netPricePerQuantity").value(15.99))
-                .andExpect(jsonPath("$.quantity").value(500.0));
+                .andExpect(jsonPath("$.quantity").value(500.0))
+                .andExpect(jsonPath("$.description").value("Set of screws"));  // Check description
     }
 
     @Test
@@ -165,13 +167,13 @@ public class AccessoryControllerIntegrationTest {
         // Arrange
         // Najpierw zapisujemy element złączny
         accessoryService.saveFastenersAccessory(
-                "Screw Set", "15.99", "500.0"
+                "Screw Set", "15.99", "500.0", "Set of screws"
         );
         String fastenersId = accessoryService.getAllFasteners().getFirst().id(); // Pobieramy ID zapisanego elementu
 
         // Przygotowujemy żądanie aktualizacji
         FastenersAccessoryRequest request = new FastenersAccessoryRequest(
-                "Bolt Set", "25.99", "600.0"
+                "Bolt Set", "25.99", "600.0", "Set of bolts" // Added description
         );
 
         // Act & Assert
@@ -181,7 +183,8 @@ public class AccessoryControllerIntegrationTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Bolt Set"))
                 .andExpect(jsonPath("$.netPricePerQuantity").value(25.99))
-                .andExpect(jsonPath("$.quantity").value(600.0));
+                .andExpect(jsonPath("$.quantity").value(600.0))
+                .andExpect(jsonPath("$.description").value("Set of bolts"));  // Check updated description
     }
 
     @Test
